--- a/ProjectWebsite/wwwroot/css/main.css
+++ b/ProjectWebsite/wwwroot/css/main.css
@@ -25,6 +25,7 @@ header h1 {
 
 header p {
     margin: 0.5rem 0 0;
+    padding: 0.5rem;
     font-size: 1.2rem;
 }
 
@@ -36,7 +37,9 @@ nav ul{
 
 a {
     text-decoration: none;
-    margin: 0 20px 0 20px;
+    margin: 20px;
+    padding: 20px;
+    color: white;
 }
 
 section {
